--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^4.6.4",
+    "@tsconfig/svelte": "^3.0.0",
+    "svelte-check": "^2.9.2",
+    "svelte-preprocess": "^4.10.7",
+    "typescript": "^4.9.3",
     "vite": "^3.2.3"
+  },
+  "dependencies": {
+    "@sveltejs/vite-plugin-svelte": "^1.2.0"
   }
 }
